# burngate

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  burngate.service  docker-compose.yml  humans.txt  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
src/: config.rs  lib.rs  lookup.rs  main.rs  ratelimit.rs  relay.rs  session.rs  tls.rs
tests/: ratelimit_test.rs  session_test.rs
