[package]
name = "burngate"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Lightweight SMTP gateway for disposable email routing — rejects mail for nonexistent recipients at RCPT TO, before the message body is ever transmitted"
license = "MIT"
repository = "https://github.com/TempyEmail/burngate"
homepage = "https://github.com/TempyEmail/burngate"
keywords = ["smtp", "gateway", "spam-filter", "email", "redis"]
categories = ["email", "network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = true
strip = true
